# memfd_secret

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  deny.toml  flake.nix
.github/workflows/: check.yml  periodic.yml  release.yml
nix/: devshell.nix  formatter.nix
src/: initial_main.txt  lib.rs  memfd_secret.rs
tests/: integration_tests.rs
