[package]
name = "memfd-secret"
version = "1.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = '''
Rust wrapper for the `memfd_secret` syscall that allows programs to store
sensitive data.
'''
readme = "README.md"
authors = ["Zoravar Singh Kalkat <zorro@zoravar.eu>"]
repository = "https://github.com/ZorroTheRelentless/memfd_secret"
keywords = ["memfd_secret", "secret", "syscall"]
categories = ["os::linux-apis", "api-bindings"]


[dependencies]
libc = "0.2.184"
memmap2 = "0.9.10"

[dev-dependencies]
errno = "0.3.14"
hegeltest = "0.5.0"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
clap = { version = "4.6.0", features = ["derive"] }
